--- a/index.html
+++ b/index.html
@@ -71,32 +71,32 @@
     <div class="carousel-inner" role="listbox">
         <div class="item active">
             <a target="_blank" href="">
-                <img src="img/banner/1.jpg" alt="banner">
+                <img src="https://s1.ax1x.com/2017/10/23/Nckrj.jpg" alt="banner">
             </a>
         </div>
         <div class="item">
             <a target="_blank" href="">
-                <img src="img/banner/2.jpg" alt="banner">
+                <img src="https://s1.ax1x.com/2017/10/23/NcuGT.jpg" alt="banner">
             </a>
         </div>
         <div class="item">
             <a target="_blank" href="">
-                <img src="img/banner/3.jpg" alt="banner">
+                <img src="https://s1.ax1x.com/2017/10/23/NcniV.jpg" alt="banner">
             </a>
         </div>
         <div class="item">
             <a target="_blank" href="">
-                <img src="img/banner/4.jpg" alt="banner">
+                <img src="https://s1.ax1x.com/2017/10/23/NceI0.jpg" alt="banner">
             </a>
         </div>
         <div class="item">
             <a target="_blank" href="">
-                <img src="img/banner/5.jpg" alt="banner">
+                <img src="https://s1.ax1x.com/2017/10/23/NcKRU.jpg" alt="banner">
             </a>
         </div>
         <div class="item">
             <a target="_blank" href="">
-                <img src="img/banner/6.jpg" alt="banner">
+                <img src="https://s1.ax1x.com/2017/10/23/NcMzF.jpg" alt="banner">
             </a>
         </div>
     </div>
