--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
 <!-- 整站通用的尾部 -->
 
 
-<script type="text/javascript" src="http://www.clantrip.com/static/js/common.js"></script>
+<script type="text/javascript" src="js/common.js"></script>
 
 <script>
     var _hmt = _hmt || [];
